--- a/package.json
+++ b/package.json
@@ -1,41 +1,39 @@
 {
-  "name": "angular-point",
-  "description": "A library designed to allow Angular2 to work with SharePoint's SOAP API's.",
-  "authors": [
-    "Scott <angular-point@scotthatcher.com>"
-  ],
-  "homepage": "https://github.com/scatcher/angular-point",
-  "version": "5.0.11",
-  "license": "MIT",
-  "angular-cli": {},
-  "scripts": {
-    "build": "webpack"
-  },
-  "dependencies": {},
-  "peerDependencies": {
-    "angular": "~1.6.4",
-    "error-stack-parser": "^1.3.1",
-    "lodash": "^4.17.4",
-    "toastr": "^2.1.2"
-  },
-  "devDependencies": {
-    "@types/angular": "~1.6.17",
-    "@types/core-js": "~0.9.41",
-    "@types/hammerjs": "^2.0.34",
-    "@types/jasmine": "~2.5.47",
-    "@types/lodash": "~4.14.64",
-    "@types/node": "^7.0.18",
-    "@types/source-map": "~0.5.0",
-    "@types/toastr": "^2.1.33",
-    "awesome-typescript-loader": "^3.1.3",
-    "tslint": "^5.2.0",
-    "tslint-loader": "^3.5.3",
-    "typescript": "~2.3.2",
-    "webpack": "2.5.1",
-    "webpack-node-externals": "^1.6.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/scatcher/angular-point.git"
-  }
+    "name": "angular-point",
+    "description": "A library designed to allow Angular2 to work with SharePoint's SOAP API's.",
+    "authors": ["Scott <angular-point@scotthatcher.com>"],
+    "homepage": "https://github.com/scatcher/angular-point",
+    "version": "5.0.12",
+    "license": "MIT",
+    "angular-cli": {},
+    "scripts": {
+        "build": "webpack"
+    },
+    "dependencies": {},
+    "peerDependencies": {
+        "angular": "~1.6.4",
+        "error-stack-parser": "^1.3.1",
+        "lodash": "^4.17.4",
+        "toastr": "^2.1.2"
+    },
+    "devDependencies": {
+        "@types/angular": "~1.6.17",
+        "@types/core-js": "~0.9.41",
+        "@types/hammerjs": "^2.0.34",
+        "@types/jasmine": "~2.5.47",
+        "@types/lodash": "~4.14.64",
+        "@types/node": "^7.0.18",
+        "@types/source-map": "~0.5.0",
+        "@types/toastr": "^2.1.33",
+        "awesome-typescript-loader": "^3.1.3",
+        "tslint": "^5.2.0",
+        "tslint-loader": "^3.5.3",
+        "typescript": "^2.3.0",
+        "webpack": "2.5.1",
+        "webpack-node-externals": "^1.6.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/scatcher/angular-point.git"
+    }
 }
