--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "description": "A library designed to allow Angular2 to work with SharePoint's SOAP API's.",
     "authors": ["Scott <angular-point@scotthatcher.com>"],
     "homepage": "https://github.com/scatcher/angular-point",
-    "version": "5.0.13",
+    "version": "6.0.0",
     "license": "MIT",
     "angular-cli": {},
     "scripts": {
@@ -17,19 +17,19 @@
         "toastr": "^2.1.2"
     },
     "devDependencies": {
-        "@types/angular": "~1.6.17",
+        "@types/angular": "^1.6.39",
         "@types/core-js": "~0.9.41",
         "@types/hammerjs": "^2.0.34",
         "@types/jasmine": "~2.5.47",
-        "@types/lodash": "~4.14.64",
+        "@types/lodash": "^4.14.64",
         "@types/node": "^7.0.18",
         "@types/source-map": "~0.5.0",
         "@types/toastr": "^2.1.33",
         "awesome-typescript-loader": "^3.1.3",
-        "tslint": "^5.2.0",
+        "tslint": "^5.8.0",
         "tslint-loader": "^3.5.3",
-        "typescript": "^2.3.0",
-        "webpack": "2.5.1",
+        "typescript": "^2.6.0",
+        "webpack": "3.8.1",
         "webpack-node-externals": "^1.6.0"
     },
     "repository": {
